--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Plack::Middleware::Profiler::KYTProf
 
+0.05 Tue Mar 4 21:50:00 2013
+    * Fixed the test module dependency 
+
 0.04 Tue Feb 12 23:59:00 2013
     * Renamed default profile modules.
       DefaultProfile -> TemplateEngine, KVS
