--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl extension Plack::Middleware::Profiler::KYTProf
 
+0.061 Tue Mar 10 12:23:00 2013
+    * Fixed the custom profile test 
 
 0.06 Tue Mar 7 23:10:00 2013
     * Fixed the custom profile test 
